styles.css
body {
    margin: 0;
}

.grid-container {
    width: 100vw;
    height: 100vh;

    display: grid;
    grid-template: 1fr 6fr / 1fr 4fr;
}

/* This section below is for header */
#header {
    border: 1px solid red;
    background-color: #FFFFFF;
    box-shadow: 0 2px 6px rgba(0,0,0,0.1);

    grid-row: 1 / 2;
    grid-column: 2 / 3;
    display: grid;
    grid-template: 2fr 3fr / 3fr 2fr;
    row-gap: 10px;
}

#search-bar {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 12px;
    padding-left: 25px;
    padding-right: 8px;
}

#search-bar > input {
    border: none;
    background-color: #E2E8F0;
    border-radius: 20px;
    height: 22px;
    width: 450px;
    padding: 0 14px;
    font-size: 14px;
}

#profile-section {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: 20px;
    padding-right: 50px;
    padding-left: 8px;
}

#profile-section > span{
    font-size: 16px;
    font-weight: 700;
    color: #1A202C;
}

#greeting-section {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 15px;
    padding-left: 25px;
    padding-right: 8px;
}

#greeting-section > div > p {
    margin: 0;
    font-weight: 700;
    font-size: 20px;
}

#greeting-section > div > p:first-child {
    font-size: 13px;
    margin-bottom: 4px;
}

#buttons-section {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: 18px;
    padding-right: 50px;
}

#buttons-section > button{
    background-color: #1992D4;
    color: #FFFFFF;
    padding: 8px 28px;
    border: none;
    border-radius: 20px;
    font-size: 14px;
    font-weight: 600;
    cursor: pointer;
}

/* This section below is for sidebar */
#sidebar {
    border: 1px solid red;
    background-color: #1992D4;
    padding-right: 12px;

    grid-row: 1 / 3;
    grid-column: 1 / 2;
    display: grid;
    grid-template-rows: 1fr 4fr 7fr;
}

#logo-row {
    display: flex;
    justify-content: start;
    align-items: start;
    gap: 10px;
    padding-left: 12px;
    padding-top: 12px;
    margin-bottom: 40px;
}

#nav-items > div {
    color: white;
    font-size: 17px;
    display: flex;
    gap: 18px;
    padding-left: 22px;
    margin-bottom: 18px;
}

#bottom-nav > div {
    color: white;
    font-size: 17px;
    display: flex;
    gap: 18px;
    padding-left: 22px;
    margin-bottom: 18px;
}

/* This section below is for main content */
#main-content {
    border: 1px solid red;
    background-color: #E2E8F0;
    padding: 24px;

    grid-row: 2 / 3;
    grid-column: 2 / 3;
    display: grid;
    grid-template: 1fr 1fr / 4fr 1fr;
}

#projects-section {
    border: 1px solid black;
    grid-row: 1 / 3;
    grid-column: 1 / 2;
}

#announcements-section {
    border: 1px solid black;
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    padding-left: 10px;
}

#announcements-section > div {
    background-color: #FFFFFF;
    border-radius: 8px;
    padding: 24px 30px;
    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
}

/* #announcements-section > div > div {

} */


#trending-section {
    border: 1px solid black;
    grid-row: 2 / 3;
    grid-column: 2 / 3;
}

